--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-13 23:23+0000\n"
+"POT-Creation-Date: 2015-02-15 15:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -42,6 +42,22 @@ msgstr "About NxtCity"
 
 #: landing/templates/landing.html:96
 msgid ""
+"Een stad is een geweldig complexe omgeving met een diversiteit aan "
+"uitdagingen. Met onderwerpen\tvari&#xEB;rend van transport tot energie en "
+"van onderwijs tot het milieu, is er een behoefte aan een generatie van "
+"creatieve puzzelaars. Door jonge stadsgenoten er vroeg bij te betrekken "
+"kunnen we profiteren van hun frisse blik. Daarnaast hebben we een kans op "
+"hun langdurige betrokkenheid, samenwerkend aan de stad van morgen."
+msgstr ""
+"A city is a wonderfully complex environment with a diverse set of "
+"challenges. With topics ranging from transportation to energy and from "
+"education to the environment, there is a need for a generation of creative "
+"problem solvers. By involving young citizens early on, we can benefit from "
+"their fresh perspective. We furthermore have a chance of triggering their "
+"long-lasting engagement, working together on the next city."
+
+#: landing/templates/landing.html:99
+msgid ""
 "De eerste editie van NxtCity (Engelse uitspraak: <i>next city</i>), wordt "
 "eind augustus gehouden in Amsterdam. Tijdens dit evenement zullen middelbare "
 "scholieren de uitdaging aangaan om de toekomstige problemen van hun stad aan "
@@ -51,20 +67,20 @@ msgstr ""
 "Amsterdam at the end of August. During this event, high school students take "
 "on the challenge of tackling future problems of their city."
 
-#: landing/templates/landing.html:99
+#: landing/templates/landing.html:102
 msgid "Meer informatie komt binnenkort beschikbaar."
 msgstr "More information is coming soon."
 
-#: landing/templates/landing.html:109
+#: landing/templates/landing.html:112
 msgctxt "header"
 msgid "Neem contact op met NxtCity"
 msgstr "Contact NxtCity"
 
-#: landing/templates/landing.html:110
+#: landing/templates/landing.html:113
 msgid "Voor meer informatie kunt u ons een email sturen."
 msgstr "Please email us for more information."
 
-#: landing/templates/landing.html:132
+#: landing/templates/landing.html:135
 msgid ""
 "NxtCity is mogelijk gemaakt door <a href='http://codecult.nl'>CodeCult</a>."
 msgstr "NxtCity is made possible by <a href='http://codecult.nl'>CodeCult</a>."
