--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-15 15:45+0000\n"
+"POT-Creation-Date: 2015-02-15 15:59+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -62,14 +62,14 @@ msgid ""
 "eind augustus gehouden in Amsterdam. Na twee inleidende workshops kunnen "
 "middelbare scholieren zich twee dagen richten op een van de vraagstukken uit "
 "hun stad. Onder begeleiding van experts en mentoren werken de scholieren toe "
-"naar concrete voorstellen. Echte oplossingen voor echte problemen. "
-"Echt leerzaam."
+"naar concrete voorstellen. Echte oplossingen verzinnen voor echte problemen. "
+"Echt&nbsp;leerzaam."
 msgstr ""
 "The first edition of NxtCity (pronounced <i>next city</i>) will be held in "
 "Amsterdam at the end of August. After two introductory workshops, the high "
-"school students can focus for two days on one of the city's issues. Guided by "
-"domain experts and mentors, they will work towards concrete proposals. Real "
-"solutions for real problems. Real learning."
+"school students can focus for two days on one of the city's issues. Guided "
+"by domain experts and mentors, they will work towards concrete proposals. "
+"Real solutions for real problems. Real&nbsp;learning."
 
 #: landing/templates/landing.html:102
 msgid "Meer informatie komt binnenkort beschikbaar."
